--- a/misc/deploy/vagrant/precise64/Vagrantfile
+++ b/misc/deploy/vagrant/precise64/Vagrantfile
@@ -62,7 +62,7 @@ Vagrant::Config.run do |config|
 
   config.vm.provision :puppet do |puppet|
     puppet.manifests_path = "../../puppet"
-    puppet.manifest_file  = "init.pp"
+    puppet.manifest_file  = "site.pp"
     puppet.module_path  = "../../puppet/modules"
   end
 
