refs #3445 - migrate Piwik CI job
git-svn-id: http://dev.piwik.org/svn/trunk@7459 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -20,7 +20,7 @@
 
 <php>
     <server name="HTTP_HOST" value="localhost"/>
-    <server name="REQUEST_URI" value="/trunk/tests/all_tests.php"/>
+    <server name="REQUEST_URI" value="@REQUEST_URI@"/>
     <server name="REMOTE_ADDR" value="127.0.0.1"/>
 </php>
 
