--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -37,9 +37,10 @@
 </testsuites>
 
 <logging>
-  <log type="coverage-html" target="./codecoverage" charset="UTF-8"
+  <log type="coverage-html" target="../results/codecoverage" charset="UTF-8"
        yui="true" highlight="false"
        lowUpperBound="35" highLowerBound="70"/>
+  <log type="junit" target="../results/logs/junit.xml" logIncompleteSkipped="true" />
 </logging>
 
 <filter>
