do code coverage also for uncovered files
git-svn-id: http://dev.piwik.org/svn/trunk@7564 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -44,7 +44,7 @@
 </logging>
 
 <filter>
-  <whitelist addUncoveredFilesFromWhitelist="false">
+  <whitelist addUncoveredFilesFromWhitelist="true">
     <directory suffix=".php">../../core</directory>
     <directory suffix=".php">../../plugins</directory>
   </whitelist>
