Previous builds failed due to a missing config.ini.php. Using the before_script command we now copy a configuration file to config/. We also create a database for tests.
PHPUnit complained about missing XDebug - so this is added.


git-svn-id: http://dev.piwik.org/svn/trunk@7833 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ php:
   - 5.3
 
 script: phpunit --configuration tests/PHPUnit/phpunit.xml.dist --coverage-text
+
+before_script
+  - mysql -e 'create database piwik_test;'
+  - ./tests/PHPUnit/travis.sh
