--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ php:
 
 script: phpunit --configuration tests/PHPUnit/phpunit.xml.dist --coverage-text
 
-before_script
+before_script:
   - mysql -e 'create database piwik_test;'
   - ./tests/PHPUnit/travis.sh
