Add contents of integration tests processed dir and VisualPHPUnit resource cache dir to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ tmp/*
 *.db
 *.buildpath
 config/config.ini.php
+tests/PHPUnit/Integration/processed/*
+tests/lib/visualphpunit/app/resource/cache/*
