Adding tests/results to .gitignore. Also removing trailing * as it is not needed.

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,6 @@ tmp/*
 *.db
 *.buildpath
 config/config.ini.php
-tests/PHPUnit/Integration/processed/*
-tests/lib/visualphpunit/app/resource/cache/*
+tests/PHPUnit/Integration/processed/
+tests/lib/visualphpunit/app/resource/cache/
+tests/results/
