Remove .svn references. refs #3736

--- a/misc/others/phpdoc-config.ini
+++ b/misc/others/phpdoc-config.ini
@@ -66,7 +66,7 @@ directory = core,plugins,libs/PiwikTracker
 ;; comma-separated list of files, directories or wildcards ? and * (any wildcard) to ignore
 ;; legal values: any wildcard strings separated by commas
 ;ignore = /path/to/ignore*,*list.php,myfile.php,subdirectory/
-ignore = pear-*,Documentation/,tests/,*.test.php,Lexer.inc,*.tpl,*.js,*.css,*.txt,*.png,*.gif,*.jpg,*.ico,*.swf,LICENSE,README,Updates/,PhpSecInfo/,.svn/,config/
+ignore = pear-*,Documentation/,tests/,*.test.php,Lexer.inc,*.tpl,*.js,*.css,*.txt,*.png,*.gif,*.jpg,*.ico,*.swf,LICENSE,README,Updates/,PhpSecInfo/,.git/,config/
 
 ;; comma-separated list of Converters to use in outputformat:Convertername:templatedirectory format
 ;; legal values: HTML:frames:default,HTML:frames:l0l33t,HTML:frames:phpdoc.de,HTML:frames:phphtmllib,
