Added GeoIP test files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ config/config.ini.php
 tests/PHPUnit/Integration/processed/
 tests/lib/visualphpunit/app/resource/cache/
 tests/results/
+tests/lib/geoip-files/
