--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ env:
     - TEST_SUITE=CoreTests
     - TEST_SUITE=IntegrationTests
 
-script: phpunit --configuration PHPUnit/phpunit.xml.dist --testsuite $TEST_SUITE
+script: phpunit --configuration phpunit.xml --testsuite $TEST_SUITE --coverage-text
 
 before_script:
   - mysql -e 'create database piwik_test;'
   - ./tests/PHPUnit/travis.sh
-  - cd tests
+  - cd tests/PHPUnit
 
 matrix:
   allow_failures:
