--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -20,6 +20,10 @@
 
 <php>
     <server name="HTTP_HOST" value="localhost"/>
+    <!--
+        When copying this file to phpunit.xml, replace with the path to Piwik on localhost.
+        If Piwik is available at http://localhost/dev/piwik/ replace @REQUEST_URI@ with /dev/piwik/
+    -->
     <server name="REQUEST_URI" value="@REQUEST_URI@"/>
     <server name="REMOTE_ADDR" value="127.0.0.1"/>
 </php>
