--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -23,6 +23,7 @@
     <!--
         When copying this file to phpunit.xml, replace with the path to Piwik on localhost.
         If Piwik is available at http://localhost/dev/piwik/ replace @REQUEST_URI@ with /dev/piwik/
+        NOTE: the REQUEST_URI should not contain "plugins" or "tests" in the PATH
     -->
     <server name="REQUEST_URI" value="@REQUEST_URI@"/>
     <server name="REMOTE_ADDR" value="127.0.0.1"/>
