--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ script: phpunit --configuration phpunit.xml --testsuite $TEST_SUITE --coverage-t
 
 before_script:
   - mysql -e 'create database piwik_test;'
-  - ./tests/PHPUnit/travis.sh
+  - ./tests/travis.sh
+  - ./tests/travis/setup_webserver.sh
   - cd tests/PHPUnit
 
 matrix:
