--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,7 @@ php:
   - 5.4
   - 5.3
 
-env:
-  matrix:
-    - TEST_SUITE=PluginTests
-    - TEST_SUITE=CoreTests
-    - TEST_SUITE=IntegrationTests
-
-script: phpunit --configuration phpunit.xml --testsuite $TEST_SUITE --coverage-text
+script: phpunit --configuration phpunit.xml --coverage-text
 
 before_script:
   - mysql -e 'create database piwik_test;'
