Adding build matrix again. refs #3722

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,13 @@ php:
   - 5.4
   - 5.3
 
-script: phpunit --configuration phpunit.xml --coverage-text
+env:
+  matrix:
+    - TEST_SUITE=PluginTests
+    - TEST_SUITE=CoreTests
+    - TEST_SUITE=IntegrationTests
+
+script: phpunit --configuration phpunit.xml --testsuite $TEST_SUITE --coverage-text
 
 before_script:
   - mysql -e 'create database piwik_test;'
