Added E-Mail notification to builds@piwik from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,7 @@ matrix:
     - php: 5.5
 
 notifications:
-  irc: "irc.freenode.org#piwik"
+  irc: 
+    -"irc.freenode.org#piwik"
+  email:
+    - builds@piwik.org
