Limit bot spam in IRC a bit [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ matrix:
 notifications:
   irc:
     skip_join: true
+    on_success: change
     channels:
       - "irc.freenode.org#piwik"
     template:
