Add docs/ directory to gitignore [ci skip]

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ tests/lib/xhprof-0.9.2/extension/libtool
 tests/lib/xhprof-0.9.2/extension/modules
 tests/lib/xhprof-0.9.2/extension/xhprof.la
 tests/lib/xhprof-0.9.2/extension/xhprof.lo
+docs/
